docs(routes): Fazendo ajustes de exemplos e retorno de erros na documentação
